--- a/final_project_just_me/css/blog.css
+++ b/final_project_just_me/css/blog.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleeapis.com/css?family=lato|Raleway:400,600')
 /* --------------------------------------------------------------------------
 Base styles:
 ----------------------------------------------------------------------------- */
@@ -6,8 +6,126 @@ Base styles:
 * {
   box-sizing: border-box;
 }
+* {
+  box-sizing: border-box;
+}
 
 /* Fix for responsive images */
 img {
-  max-width: 100%;
+  max-width: 30%;
+
+}
+body{
+  font-family: "Raleway";
+  margin: 0;
+}
+nav{
+  font-weight: 600px;
+  font-size: 30px;
+  text-align: center;
+  word-spacing: 100px;
+  color:blue;
+  background-color: black;
+  padding:20px;
+}
+nav strong{
+  color: white;
+}
+nav a{
+  text-decoration: none;
+  text-transform:capitalize;
+  color: blue;
+}
+nav a:hover{
+  color:white;
+}
+h1{
+  text-align: center;
+  font-size: 50px;
+  font-family: "Raleway";
+  font-weight: 600;
+  color: #000080;
+  font-family: "lato";
+  font-weight: 400;
+  text-transform: capitalize;
+}
+header p{
+  font-size: 20px;
+  text-align: justify;
+  margin: 10px;
+}
+h2{
+  text-align:center;
+  text-decoration: none;
+}
+h2 a{
+  text-decoration: none;
+}
+h3{
+  text-align: center;
+  text-decoration: underline;
+  font-size: 15px;
+  font-family: "Raleway";
+  font-weight: 200;
+}
+img {
+  float: left;
+}
+article:first-of-type{
+  display: block;
+}
+
+article{
+  padding: 20px;
+  border-bottom: 20px;
+  display: none;
+}
+
+article img{
+  padding: 10px;
+}
+
+article p{
+  font-size: 20px;
+  font-family: "Raleway"
+  font-weight: 600;
+}
+
+button{
+  background-color: black;
+  color: blue;
+  text-align: center;
+  border-radius: 12px;
+  font-size: 20px;
+  font-weight: 600px;
+  width: 150px;
+}
+button:hover{
+  background-color: blue;
+  color: white;
+}
+
+.hamburger{
+  background-color:black
+  font-size: 30px;
+  padding: 10px 30px
+  color: blue;
+  display:none;
+}
+
+.carousel-wrapper{
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  text-align: justify;
+  margin: 50px;
+}
+
+@media screen and (max-width:650px){
+  .nav-wrapper a{
+    display:block;
+    text-align:center;
+  }
+  nav{
+    display: none;
+  }
 }
