--- a/final_project_just_me/css/entertainment.css
+++ b/final_project_just_me/css/entertainment.css
@@ -11,3 +11,27 @@ Base styles:
 img {
   max-width: 100%;
 }
+body{
+  font-family: "Raleway";
+  margin: 0;
+}
+
+nav{
+  font-weight: 600px;
+  font-size: 30px;
+  text-align: center;
+  word-spacing: 100px;
+  color:blue;
+  background-color: black;
+  padding:20px;
+}
+nav strong{
+  color: white;
+}
+nav a{
+  text-decoration: none;
+  text-transform:capitalize;
+  color: blue;
+}
+nav a:hover{
+  color:white;
