--- a/final_project_just_me/css/blog.css
+++ b/final_project_just_me/css/blog.css
@@ -13,8 +13,8 @@ Base styles:
 /* Fix for responsive images */
 img {
   max-width: 30%;
-
 }
+
 body{
   font-family: "Raleway";
   margin: 0;
@@ -26,7 +26,7 @@ nav{
   word-spacing: 100px;
   color:blue;
   background-color: black;
-  padding:20px;
+  padding:50px;
 }
 nav strong{
   color: white;
@@ -87,11 +87,16 @@ article img{
 
 article p{
   font-size: 20px;
-  font-family: "Raleway"
-  font-weight: 600;
+  font-family: "Raleway";
+  font-weight: 300;
+}
+
+.carousel-wrapper{
+  height: 300px;
 }
 
 button{
+  margin: 0 auto;
   background-color: black;
   color: blue;
   text-align: center;
@@ -99,6 +104,8 @@ button{
   font-size: 20px;
   font-weight: 600px;
   width: 150px;
+  outline:0;
+
 }
 button:hover{
   background-color: blue;
@@ -106,26 +113,22 @@ button:hover{
 }
 
 .hamburger{
-  background-color:black
-  font-size: 30px;
-  padding: 10px 30px
+  background-color:black;
+  font-size: 27px;
+  padding: 10px 30px;
   color: blue;
   display:none;
-}
-
-.carousel-wrapper{
-  display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  text-align: justify;
-  margin: 50px;
 }
 
 @media screen and (max-width:650px){
   .nav-wrapper a{
     display:block;
-    text-align:center;
+    text-align:left;
   }
   nav{
     display: none;
+  }
+  .carousel-wrapper{
+    height: 400px;
   }
 }
