--- a/final_project_just_me/css/fitness.css
+++ b/final_project_just_me/css/fitness.css
@@ -24,7 +24,7 @@ nav{
   word-spacing: 100px;
   color:blue;
   background-color: black;
-  padding:20px;
+  padding:50px;
 }
 nav strong{
   color: white;
@@ -36,3 +36,4 @@ nav a{
 }
 nav a:hover{
   color:white;
+}
